<resources>
    <!--main-->
    <string name="app_name">Assignment 2</string>
    <string name="rollNo">15L-4172</string>
    <string name="relative">Relative Layout</string>
    <string name="constraint">Constraint Layout</string>
    <!--signUp-->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="terms">I agree with Terms and Conditions</string>
    <string name="register">Register</string>

</resources>
