<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rollNo"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/rollno" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <Button
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="navigate"
        android:paddingLeft="@dimen/relativePadding"
        android:paddingRight="@dimen/relativePadding"
        android:tag="1"
        android:text="@string/relative" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btnDivider"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <Button
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="navigate"
        android:tag="2"
        android:text="@string/constraint" />
</LinearLayout>